format of the title

--- a/index.html
+++ b/index.html
@@ -21,22 +21,49 @@
       crossorigin="anonymous"
     ></script>
 
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+
     <title>My Portfolio</title>
   </head>
   <body>
     <nav>
-      <div class="container">
+      <div class="container position-absolute">
         <div class="row">
           <div class="col-12">
             <div class="d-flex">
-              <a class="navbar-brand ms-auto me-auto" href="#">Kael Harris</a>
-              <a class="nav-item nav-link me-3" href="#">Home</a>
-              <a class="nav-item nav-link ms-3 me-3" href="#">About</a>
-              <a class="nav-item nav-link ms-3 me-auto" href="#">Portfolio</a>
+              <a class="navbar-brand ms-auto me-auto text-light" href="#"
+                >Kael Harris</a
+              >
+              <a class="nav-item nav-link me-3 text-light" href="#">Home</a>
+              <a class="nav-item nav-link ms-3 me-3 text-light" href="#"
+                >About</a
+              >
+              <a class="nav-item nav-link ms-3 me-auto text-light" href="#"
+                >Portfolio</a
+              >
             </div>
           </div>
         </div>
       </div>
     </nav>
+    <div id="title-screen">
+      <div class="row">
+        <div class="col-12">
+          <div class="top-img w-100 d-flex justify-content-center">
+            <h2 class="text-light">Kael Harris</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="about-me mt-4 mb-4">
+            <h2 class="about-ttl mt-4 mb-4">About Me</h2>
+            <p class="about-info mb-4">text about me</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
