--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
         </div>
       </div>
     </nav>
-    <div id="title-screen">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <div class="top-img w-100 d-flex justify-content-center">
+          <div
+            class="top-img w-100 d-flex justify-content-center align-items-center"
+          >
             <h2 class="text-light">Kael Harris</h2>
           </div>
         </div>
@@ -61,6 +63,55 @@
           <div class="about-me mt-4 mb-4">
             <h2 class="about-ttl mt-4 mb-4">About Me</h2>
             <p class="about-info mb-4">text about me</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="port">
+            <h2 class="port-title">My Portfolio</h2>
+            <p class="port-info">detailes about my portfolio</p>
+            <div class="row">
+              <div class="col-3">
+                <div class="port-img border p-4">img</div>
+              </div>
+              <div class="col-3">
+                <div class="port-img border p-4">img</div>
+              </div>
+              <div class="col-3">
+                <div class="port-img border p-4">img</div>
+              </div>
+              <div class="col-3">
+                <div class="port-img border p-4">img</div>
+              </div>
+              <div class="col-3">
+                <div class="port-img border p-4">img</div>
+              </div>
+              <div class="col-3">
+                <div class="port-img border p-4">img</div>
+              </div>
+              <div class="col-3">
+                <div class="port-img border p-4">img</div>
+              </div>
+              <div class="col-3">
+                <div class="port-img border p-4">img</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="footer-top">
+            <h2 class="foot-ttl">Kael Harris</h2>
+            <p class="foot-info">text for the footer</p>
+          </div>
+          <div class="col-12">
+            <div class="footer-bottom">atlcadamy info and links</div>
           </div>
         </div>
       </div>
