--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-12">
-          <h2 class="about-ttl d-flex justify-content-center">About Me</h2>
+        <div class="col-12 mt-5">
+          <h2 class="about-ttl d-flex justify-content-center mt-5 pt-5 mb-3">About Me</h2>
         </div>
         <div class="col-12">
-          <p class="about-info d-flex justify-content-center">text about me</p>
+          <p class="about-info d-flex justify-content-center mt-3 mb-5 pb-5">text about me</p>
         </div>
       </div>
     </div>
@@ -81,36 +81,37 @@
         <div class="col-12"> 
           <div class="row">
             <div class="col-12">
-              <h2 class="port-title d-flex justify-content-center">My Portfolio</h2>
+              <h2 class="port-title d-flex justify-content-center mb-3 mt-5">My Portfolio</h2>
             </div>
             <div class="col-12">
-              <p class="port-info d-flex justify-content-center">detailes about my portfolio</p>
+              <p class="port-info d-flex justify-content-center mt-3 mb-5 pb-5">detailes about my portfolio</p>
             </div>
-            <div class="col-12">
+            <div class="col-12 mb-5 pb-5">
               <div class="row">
-              <div class="col-3">
-                <div class="port-img border p-4">img</div>
-              </div>
-              <div class="col-3">
-                <div class="port-img border p-4">img</div>
-              </div>
-              <div class="col-3">
-                <div class="port-img border p-4">img</div>
-              </div>
-              <div class="col-3">
-                <div class="port-img border p-4">img</div>
-              </div>
-              <div class="col-3">
-                <div class="port-img border p-4">img</div>
-              </div>
-              <div class="col-3">
-                <div class="port-img border p-4">img</div>
-              </div>
-              <div class="col-3">
-                <div class="port-img border p-4">img</div>
-              </div>
-              <div class="col-3">
-                <div class="port-img border p-4">img</div>
+                <div class="col-3">
+                  <div class="port-img border p-4">img</div>
+                </div>
+                <div class="col-3">
+                  <div class="port-img border p-4">img</div>
+                </div>
+                <div class="col-3">
+                  <div class="port-img border p-4">img</div>
+                </div>
+                <div class="col-3">
+                  <div class="port-img border p-4">img</div>
+                </div>
+                <div class="col-3">
+                  <div class="port-img border p-4">img</div>
+                </div>
+                <div class="col-3">
+                  <div class="port-img border p-4">img</div>
+                </div>
+                <div class="col-3">
+                  <div class="port-img border p-4">img</div>
+                </div>
+                <div class="col-3">
+                  <div class="port-img border p-4">img</div>
+                </div>
               </div>
             </div>
           </div>
@@ -120,19 +121,20 @@
 
     <!--footer-->
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <h2 class="foot-ttl d-flex justify-content-center">Kael Harris</h2>
+          <h2 class="foot-ttl d-flex justify-content-center mt-5 pt-5 mb-3">Kael Harris</h2>
         </div>
         <div class="col-12">
-          <p class="foot-info d-flex justify-content-center">text for the footer</p>
+          <p class="foot-info d-flex justify-content-center mt-3 mb-5">text for the footer</p>
         </div>
-        <div class="col-12">
+        <hr>
+        <div class="col-12 pt-3 mb-3">
           <div class="footer-bottom">atlcadamy info and links</div>
         </div>
-        
       </div>
     </div>
+
   </body>
 </html>
