--- a/index.html
+++ b/index.html
@@ -28,20 +28,21 @@
   <body>
     <!--navbar-->
 
-    <div class="container position-absolute">
+    <div class="container-fluid position-fixed">
       <div class="row">
         <div class="col-12">
-          <nav class="navbar navbar-expanded-xl">
+          <nav class="navbar nav-color">
             <div class="container">
               <div class="d-flex">
-                <a class="navbar-brand text-light" href="#">Kael Harris</a>
+                <a class="navbar-brand nav-brand me-0 text-light" href="#">Kael Harris</a>
               </div>
-              <div class="d-flex">
-                <a class="nav-item nav-link text-light" href="#">Home</a>
-                <a class="nav-item nav-link text-light" href="#">About</a>
-                <a class="nav-item nav-link text-light" href="#">Portfolio</a>
-                <a class="nav-item nav-link text-light nav-links" href="#">links</a>
-            </div>
+              <div class="d-flex justify-content-center">
+                <a class="nav-item nav-link text-light me-4" href="#">Home</a>
+                <a class="nav-item nav-link text-light ms-4 me-4" href="#">About</a>
+                <a class="nav-item nav-link text-light ms-4" href="#">Portfolio</a>
+              </div>
+                <a class="nav-item nav-link text-light d-flex nav-links" href="#">links</a>
+            
           </nav>
         </div>
       </div>
@@ -66,17 +67,32 @@
     <div class="container">
       <div class="row">
         <div class="col-12 mt-5">
-          <h2 class="about-ttl d-flex justify-content-center mt-5 pt-5 mb-3">About Me</h2>
+          <h2 class="about-ttl d-flex justify-content-center mt-3 pt-3 mb-3">About Me</h2>
         </div>
         <div class="col-12">
-          <p class="about-info d-flex justify-content-center mt-3 mb-5 pb-5">text about me</p>
+          <p class="about-info d-flex justify-content-center text-center mt-3 mb-5">text about me text about me 
+            text about me text about me text about me text about me text about me text about me text about 
+            me text about me text about me text about me text about me text about me text about me text about 
+            me text about me text about me text about me text about me text about me text about me text about 
+            me text about me </p>
+        </div>
+        <div class="col-12 mb-5 pb-5">
+          <div class="row">
+            <div class="col-6">
+              <img class=" img-fluid rounded-4 about-img" src="./portfolio_img/IMG_8878.jpeg">
+            </div>
+            <div class="col-6 d-flex align-items-center">
+              <p class="about-more-info">more text about me more text about me more text about me more text about me more text
+                about me more text about me more text about me more text about me more text about me</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
     <!--portfolio-->
 
-    <div class="container">
+    <div class="container border-top">
       <div class="row">
         <div class="col-12"> 
           <div class="row">
@@ -89,28 +105,44 @@
             <div class="col-12 mb-5 pb-5">
               <div class="row">
                 <div class="col-3">
-                  <div class="port-img border p-4">img</div>
+                  <div class="port-img">
+                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                  </div>
                 </div>
                 <div class="col-3">
-                  <div class="port-img border p-4">img</div>
+                  <div class="port-img">
+                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                  </div>
                 </div>
                 <div class="col-3">
-                  <div class="port-img border p-4">img</div>
+                  <div class="port-img">
+                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                  </div>
                 </div>
                 <div class="col-3">
-                  <div class="port-img border p-4">img</div>
+                  <div class="port-img">
+                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                  </div>
                 </div>
                 <div class="col-3">
-                  <div class="port-img border p-4">img</div>
+                  <div class="port-img">
+                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                  </div>
                 </div>
                 <div class="col-3">
-                  <div class="port-img border p-4">img</div>
+                  <div class="port-img">
+                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                  </div>
                 </div>
                 <div class="col-3">
-                  <div class="port-img border p-4">img</div>
+                  <div class="port-img">
+                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                  </div>
                 </div>
                 <div class="col-3">
-                  <div class="port-img border p-4">img</div>
+                  <div class="port-img">
+                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                  </div>
                 </div>
               </div>
             </div>
@@ -121,17 +153,21 @@
 
     <!--footer-->
 
-    <div class="container-fluid">
+    <div class="container-fluid footer-background mt-5">
       <div class="row">
         <div class="col-12">
-          <h2 class="foot-ttl d-flex justify-content-center mt-5 pt-5 mb-3">Kael Harris</h2>
+          <h2 class="foot-ttl d-flex justify-content-center mt-3 pt-3 mb-3">Kael Harris</h2>
         </div>
         <div class="col-12">
-          <p class="foot-info d-flex justify-content-center mt-3 mb-5">text for the footer</p>
+          <p class="foot-info d-flex justify-content-center text-center ms-5 me-5 ps-5 pe-5 mt-3 pb-5 mb-5">text for the footer 
+            text for the footer text for the footer text for the footer text for the footer text 
+            for the footer text for the footer text for the footer text for the footer text for 
+            the footer text for the footer text for the footer text for the footer text for the 
+            footer text for the footer text for the footer text for the footer text for the 
+            footer text for the footer text for the footer </p>
         </div>
-        <hr>
-        <div class="col-12 pt-3 mb-3">
-          <div class="footer-bottom">atlcadamy info and links</div>
+        <div class="col-12 pt-3 pb-3 footer-bottom">
+          <div class="footer-subtxt text-light">atlcadamy info and links</div>
         </div>
       </div>
     </div>
