--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@
           <nav class="navbar nav-color">
             <div class="container">
               <div class="d-flex">
-                <a class="navbar-brand nav-brand me-0 text-light" href="#">Kael Harris</a>
+                <a class="navbar-brand nav-brand me-0 text-light" href="#">
+                  <img class="img-fluid logo" src="./images/Kaell (1).png">
+                </a>
               </div>
               <div class="d-flex justify-content-center">
                 <a class="nav-item nav-link text-light me-4" href="#">Home</a>
                 <a class="nav-item nav-link text-light ms-4 me-4" href="#">About</a>
                 <a class="nav-item nav-link text-light ms-4" href="#">Portfolio</a>
               </div>
-                <a class="nav-item nav-link text-light d-flex nav-links" href="#">links</a>
+                <div class="nav-item d-flex nav-links">
+                  <img class="img-fluid icon-img me-3" src="./images/social-white.png">
+                  <img class="img-fluid icon-img ms-2" src="./images/linkedin-white.png">
+                </div>
             
           </nav>
         </div>
@@ -56,7 +61,10 @@
           <div
             class="top-img w-100 d-flex justify-content-center align-items-center"
           >
-            <h2 class="text-light">Kael Harris</h2>
+            <div class="decal p-5">
+              <h2 class="text-light d-flex justify-content-center">Kael Harris</h2>
+              <p class="text-light d-flex justify-content-center ttl-txt pt-2">Full Stack Developer Student</p>
+            </div>
           </div>
         </div>
       </div>
@@ -67,16 +75,20 @@
     <div class="container">
       <div class="row">
         <div class="col-12 mt-5">
-          <h2 class="about-ttl d-flex justify-content-center mt-3 pt-3 mb-3">About Me</h2>
+          <h2 class="about-ttl d-flex justify-content-center mt-3 pt-3 mb-4">About Me</h2>
         </div>
         <div class="col-12">
-          <p class="about-info d-flex justify-content-center text-center mt-3 mb-5">text about me text about me 
+          <p class="about-info d-flex justify-content-center text-center mb-3">text about me text about me 
             text about me text about me text about me text about me text about me text about me text about 
             me text about me text about me text about me text about me text about me text about me text about 
             me text about me text about me text about me text about me text about me text about me text about 
             me text about me </p>
         </div>
-        <div class="col-12 mb-5 pb-5">
+      </div>
+    </div>
+    <div class="container-fluid pt-5 pb-2 about-color">
+      <div class="container pt-2">
+        <div class="col-12 mb-5">
           <div class="row">
             <div class="col-6">
               <img class=" img-fluid rounded-4 about-img" src="./portfolio_img/IMG_8878.jpeg">
@@ -92,56 +104,54 @@
 
     <!--portfolio-->
 
-    <div class="container border-top">
+    <div class="container pt-5 pb-5">
       <div class="row">
         <div class="col-12"> 
-          <div class="row">
+          <div class="row pb-3">
             <div class="col-12">
               <h2 class="port-title d-flex justify-content-center mb-3 mt-5">My Portfolio</h2>
             </div>
             <div class="col-12">
-              <p class="port-info d-flex justify-content-center mt-3 mb-5 pb-5">detailes about my portfolio</p>
+              <p class="port-info d-flex justify-content-center mb-3 pb-4">detailes about my portfolio</p>
             </div>
             <div class="col-12 mb-5 pb-5">
               <div class="row">
-                <div class="col-3">
+                <div class="col-3 p-0">
+                    <img class="img-fluid rounded p-2" src="./portfolio_img/IMG_3907.jpeg">
+                </div>
+                <div class="col-3 p-0">
                   <div class="port-img">
-                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
                   </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 p-0">
                   <div class="port-img">
-                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
                   </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 p-0">
                   <div class="port-img">
-                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
                   </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 p-0">
                   <div class="port-img">
-                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
                   </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 p-0">
                   <div class="port-img">
-                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
                   </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 p-0">
                   <div class="port-img">
-                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
                   </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3 p-0">
                   <div class="port-img">
-                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div class="port-img">
-                    <img class="img-fluid" src="./portfolio_img/IMG_3907.jpeg">
+                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
                   </div>
                 </div>
               </div>
@@ -156,18 +166,26 @@
     <div class="container-fluid footer-background mt-5">
       <div class="row">
         <div class="col-12">
-          <h2 class="foot-ttl d-flex justify-content-center mt-3 pt-3 mb-3">Kael Harris</h2>
+          <h2 class="foot-ttl d-flex justify-content-center mt-3 pt-3 mb-3">
+            <img class="img-fluid logo-img" src="./images/Kaell.png">
+          </h2>
         </div>
         <div class="col-12">
-          <p class="foot-info d-flex justify-content-center text-center ms-5 me-5 ps-5 pe-5 mt-3 pb-5 mb-5">text for the footer 
+          <p class="foot-info d-flex justify-content-center text-center ms-5 me-5 ps-5 pe-5 mt-3 pb-4 mb-5">text for the footer 
             text for the footer text for the footer text for the footer text for the footer text 
             for the footer text for the footer text for the footer text for the footer text for 
             the footer text for the footer text for the footer text for the footer text for the 
             footer text for the footer text for the footer text for the footer text for the 
             footer text for the footer text for the footer </p>
         </div>
-        <div class="col-12 pt-3 pb-3 footer-bottom">
-          <div class="footer-subtxt text-light">atlcadamy info and links</div>
+        <div class="col-12 pt-3 pb-1 footer-bottom">
+          <div class="footer-subtxt text-light d-flex justify-content-between">
+            <p>Part of <a href="#">Altcadamy's</a> Full Stack Program!</p>
+            <div class="footer-links me-3">
+              <img class="img-fluid icon-img me-3" src="./images/social-white.png">
+              <img class="img-fluid icon-img" src="./images/linkedin-white.png">
+            </div>
+          </div>
         </div>
       </div>
     </div>
