--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
 
     <!-- Bootstrap CSS -->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,30 +27,52 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <!--navbar-->
+    <!-- navbar -->
 
-    <div class="container-fluid position-fixed">
+    <div class="container-fluid position-fixed test">
       <div class="row">
         <div class="col-12">
           <nav class="navbar nav-color">
             <div class="container">
               <div class="d-flex">
                 <a class="navbar-brand nav-brand me-0 text-light" href="#">
-                  <img class="img-fluid logo" src="./images/Kaell (1).png">
+                  <img class="img-fluid logo" src="./images/Kaell (1).png" />
                 </a>
               </div>
-              <div class="d-flex justify-content-center">
+              <div class="d-flex justify-content-center nav-xs-links">
                 <a class="nav-item nav-link text-light me-4" href="#">Home</a>
-                <a class="nav-item nav-link text-light ms-4 me-4" href="#">About</a>
-                <a class="nav-item nav-link text-light ms-4" href="#">Portfolio</a>
+                <a class="nav-item nav-link text-light ms-4 me-4" href="#about"
+                  >About</a
+                >
+                <a class="nav-item nav-link text-light ms-4" href="#portfolio"
+                  >Portfolio</a
+                >
               </div>
-                <div class="nav-item d-flex nav-links">
-                  <img class="img-fluid icon-img me-3" src="./images/social-white.png">
-                  <img class="img-fluid icon-img ms-2" src="./images/linkedin-white.png">
-                </div>
-            
+              <div class="nav-item d-none d-md-flex nav-links">
+                <a href="https://github.com/Kael-H">
+                  <img
+                    class="img-fluid icon-img me-3"
+                    src="./images/social-white.png"
+                  />
+                </a>
+                <a href="https://www.linkedin.com/in/kael-harris-36673934b/">
+                  <img
+                    class="img-fluid icon-img ms-2"
+                    src="./images/linkedin-white.png"
+                  />
+                </a>
+              </div>
+            </div>
           </nav>
         </div>
+      </div>
+    </div>
+
+    <!--sm top margin-->
+
+    <div class="cantainer-fluid d-flex d-md-none">
+      <div class="row">
+        <div class="col-12 sm-margin"></div>
       </div>
     </div>
 
@@ -57,15 +80,20 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 ttl-pos">
           <div
             class="top-img w-100 d-flex justify-content-center align-items-center"
           >
             <div class="decal p-5">
-              <h2 class="text-light d-flex justify-content-center">Kael Harris</h2>
-              <p class="text-light d-flex justify-content-center ttl-txt pt-2">Full Stack Developer Student</p>
+              <h2 class="text-light d-flex justify-content-center">
+                Kael Harris
+              </h2>
+              <p class="text-light d-flex justify-content-center ttl-txt pt-2">
+                Full Stack Developer Student
+              </p>
             </div>
           </div>
+          <div id="about"></div>
         </div>
       </div>
     </div>
@@ -73,85 +101,123 @@
     <!--about me-->
 
     <div class="container">
-      <div class="row">
-        <div class="col-12 mt-5">
-          <h2 class="about-ttl d-flex justify-content-center mt-3 pt-3 mb-4">About Me</h2>
+      <div class="row about-pos">
+        <div class="col-12">
+          <h2 class="about-ttl d-flex justify-content-center mb-4">About Me</h2>
         </div>
         <div class="col-12">
-          <p class="about-info d-flex justify-content-center text-center mb-3">text about me text about me 
-            text about me text about me text about me text about me text about me text about me text about 
-            me text about me text about me text about me text about me text about me text about me text about 
-            me text about me text about me text about me text about me text about me text about me text about 
-            me text about me </p>
+          <p class="about-info d-flex justify-content-center text-center mb-3">
+            I am a full stack developer student at Altcadamy. I am hard working
+            and very excited to use all of the things I am learning to improve
+            my life and others. Video games and computers have always been a
+            pasion of mine so I couldn't ask for a job better suited for me.
+          </p>
         </div>
       </div>
     </div>
-    <div class="container-fluid pt-5 pb-2 about-color">
+    <div class="container-fluid pt-5 mt-5 pb-2 about-color">
       <div class="container pt-2">
         <div class="col-12 mb-5">
           <div class="row">
             <div class="col-6">
-              <img class=" img-fluid rounded-4 about-img" src="./portfolio_img/IMG_8878.jpeg">
+              <img
+                class="img-fluid rounded-4 about-img"
+                src="./portfolio_img/IMG_8878.jpeg"
+              />
             </div>
             <div class="col-6 d-flex align-items-center">
-              <p class="about-more-info">more text about me more text about me more text about me more text about me more text
-                about me more text about me more text about me more text about me more text about me</p>
+              <p class="about-more-info">
+                Besides computers I have always loved the outdoors. the beach,
+                camping, hiking and even snowboarding are all things that bring
+                me joy. I am highly motivated and a quick learner. My biggest
+                struggle is balancing my personal, work and family life.
+              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
 
+    <div id="portfolio"></div>
+
     <!--portfolio-->
 
     <div class="container pt-5 pb-5">
       <div class="row">
-        <div class="col-12"> 
+        <div class="col-12">
           <div class="row pb-3">
             <div class="col-12">
-              <h2 class="port-title d-flex justify-content-center mb-3 mt-5">My Portfolio</h2>
+              <h2 class="port-title d-flex justify-content-center mb-3 mt-5">
+                My Portfolio
+              </h2>
             </div>
             <div class="col-12">
-              <p class="port-info d-flex justify-content-center mb-3 pb-4">detailes about my portfolio</p>
+              <p class="port-info d-flex justify-content-center mb-5 pb-4">
+                Portfolio placeholder images
+              </p>
             </div>
             <div class="col-12 mb-5 pb-5">
-              <div class="row">
-                <div class="col-3 p-0">
-                    <img class="img-fluid rounded p-2" src="./portfolio_img/IMG_3907.jpeg">
+              <div class="row mb-5 pb-5">
+                <div class="col-xl-3 col-lg-4 col-md-6 p-0">
+                  <img
+                    class="img-fluid rounded p-2"
+                    src="./images/aleksander-vlad-jiVeo0i1EB4-unsplash.jpg"
+                  />
                 </div>
-                <div class="col-3 p-0">
+                <div class="col-xl-3 col-lg-4 col-md-6 p-0">
                   <div class="port-img">
-                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
+                    <img
+                      class="img-fluid p-2"
+                      src="./images/carlos-muza-hpjSkU2UYSU-unsplash.jpg"
+                    />
                   </div>
                 </div>
-                <div class="col-3 p-0">
+                <div class="col-xl-3 col-lg-4 col-md-6 p-0">
                   <div class="port-img">
-                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
+                    <img
+                      class="img-fluid p-2"
+                      src="./images/christian-wiediger-WkfDrhxDMC8-unsplash.jpg"
+                    />
                   </div>
                 </div>
-                <div class="col-3 p-0">
+                <div class="col-xl-3 col-lg-4 col-md-6 p-0">
                   <div class="port-img">
-                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
+                    <img
+                      class="img-fluid p-2"
+                      src="./images/christin-hume-mfB1B1s4sMc-unsplash.jpg"
+                    />
                   </div>
                 </div>
-                <div class="col-3 p-0">
+                <div class="col-xl-3 col-lg-4 col-md-6 p-0">
                   <div class="port-img">
-                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
+                    <img
+                      class="img-fluid p-2"
+                      src="./images/christopher-gower-m_HRfLhgABo-unsplash.jpg"
+                    />
                   </div>
                 </div>
-                <div class="col-3 p-0">
+                <div class="col-xl-3 col-lg-4 col-md-6 p-0">
                   <div class="port-img">
-                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
+                    <img
+                      class="img-fluid p-2"
+                      src="./images/kari-shea-1SAnrIxw5OY-unsplash.jpg"
+                    />
                   </div>
                 </div>
-                <div class="col-3 p-0">
+                <div class="col-xl-3 col-lg-4 col-md-6 p-0">
                   <div class="port-img">
-                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
+                    <img
+                      class="img-fluid p-2"
+                      src="./images/nordwood-themes-bJjsKbToY34-unsplash.jpg"
+                    />
                   </div>
                 </div>
-                <div class="col-3 p-0">
+                <div class="col-xl-3 col-lg-4 col-md-6 p-0">
                   <div class="port-img">
-                    <img class="img-fluid p-2" src="./portfolio_img/IMG_3907.jpeg">
+                    <img
+                      class="img-fluid p-2"
+                      src="./images/tianyi-ma-WiONHd_zYI4-unsplash.jpg"
+                    />
                   </div>
                 </div>
               </div>
@@ -167,28 +233,38 @@
       <div class="row">
         <div class="col-12">
           <h2 class="foot-ttl d-flex justify-content-center mt-3 pt-3 mb-3">
-            <img class="img-fluid logo-img" src="./images/Kaell.png">
+            <img class="img-fluid logo-img" src="./images/Kaell.png" />
           </h2>
         </div>
         <div class="col-12">
-          <p class="foot-info d-flex justify-content-center text-center ms-5 me-5 ps-5 pe-5 mt-3 pb-4 mb-5">text for the footer 
-            text for the footer text for the footer text for the footer text for the footer text 
-            for the footer text for the footer text for the footer text for the footer text for 
-            the footer text for the footer text for the footer text for the footer text for the 
-            footer text for the footer text for the footer text for the footer text for the 
-            footer text for the footer text for the footer </p>
+          <p
+            class="foot-info d-flex justify-content-center text-center ms-5 me-5 ps-5 pe-5 mt-3 pb-4 mb-5"
+          >
+            I hope you found what you were looking for and thank you for
+            visiting my website. This is a portfolio page for the curriculum of
+            Altcadamy.
+          </p>
         </div>
         <div class="col-12 pt-3 pb-1 footer-bottom">
           <div class="footer-subtxt text-light d-flex justify-content-between">
             <p>Part of <a href="#">Altcadamy's</a> Full Stack Program!</p>
             <div class="footer-links me-3">
-              <img class="img-fluid icon-img me-3" src="./images/social-white.png">
-              <img class="img-fluid icon-img" src="./images/linkedin-white.png">
+              <a href="https://github.com/Kael-H">
+                <img
+                  class="img-fluid icon-img me-3"
+                  src="./images/social-white.png"
+                />
+              </a>
+              <a href="https://www.linkedin.com/in/kael-harris-36673934b/">
+                <img
+                  class="img-fluid icon-img"
+                  src="./images/linkedin-white.png"
+                />
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-
   </body>
 </html>
