--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@
         </div>
         <div class="col-12 pt-3 pb-1 footer-bottom">
           <div class="footer-subtxt text-light d-flex justify-content-between">
-            <p>Part of <a href="#">Altcadamy's</a> Full Stack Program!</p>
+            <p>
+              Part of <a href="https://www.altcademy.com/">Altcadamy's</a> Full
+              Stack Program!
+            </p>
             <div class="footer-links me-3">
               <a href="https://github.com/Kael-H">
                 <img
